--- a/deep.html
+++ b/deep.html
@@ -23,22 +23,22 @@
 <body>
     <div class="d-flex flex-column justify-content-center" id="login-box">
         <div class="login-box-header"><img class="tada animated" src="PUBG_Mobile_Simple_logo_black_PNG.png" style="width: 158px;font-weight: bold;" width="158" height="118">
-            <h4 style="color: var(--bs-form-valid-border-color);margin: 14px;margin-bottom: 0px;font-weight: 400;font-size: 27px;font-family: Cairo, sans-serif;border-color: rgb(93,180,27);">شحن شدات ببجي</h4>
+            <h4 style="color: var(--bs-form-valid-border-color);margin: 14px;margin-bottom: 0px;font-weight: 400;font-size: 27px;font-family: Cairo, sans-serif;border-color: rgb(93,180,27);">UC recharge in PUBG</h4>
         </div>
         <div class="email-login" style="background-color: #ffffff;text-align: center;"><small class="form-text text-center" style="font-family: Cairo, sans-serif;color: rgba(41,48,59,0.24);"></small>
-            <div class="alert alert-danger text-center" role="alert"><span style="font-family: Cairo, sans-serif;">خطأ! يجب علينا التحقق من أنك إنسان ولست روبوت إضغط على زر التحقق لكي تبدأ عملية إرسال 30000 شدة الخاصة بك</span></div>
+            <div class="alert alert-danger text-center" role="alert"><span style="font-family: Cairo, sans-serif;">mistake! We must verify that you are a human and not a robot. Click on the verification button to begin the process of sending your 30,000 UC.</span></div>
             <div class="container text-center" style="border-radius: 5px;border-color: var(--bs-secondary-bg);color: var(--bs-secondary-color);"><img src="PUBG_Mobile_Simple_logo_black_PNG.png" style="width: 34px;"><span class="text-start counter" akhi="30000" style="font-family: Cairo, sans-serif;font-size: 20px;color: var(--bs-body-color);"></span><small class="form-text" style="font-family: Cairo, sans-serif;font-weight: bold;font-size: 20px;color: var(--bs-body-color);">3000Uc Added</small></div>
             <div class="steps-progressbar" style="font-family: Cairo, sans-serif;">
                 <ul class="list-inline font-monospace">
-                    <li class="list-inline-item previous" style="font-family: Cairo, sans-serif;">تم التحقق من الايدي</li>
-                    <li class="list-inline-item active" style="font-family: Cairo, sans-serif;">تم تحصيل 30 الف شدة مجانا</li>
-                    <li class="list-inline-item" style="font-family: Cairo, sans-serif;">الخطوة الاخير تحقق</li>
+                    <li class="list-inline-item previous" style="font-family: Cairo, sans-serif;">Hands verified</li>
+                    <li class="list-inline-item active" style="font-family: Cairo, sans-serif;">30 thousand UC collected</li>
+                    <li class="list-inline-item" style="font-family: Cairo, sans-serif;">The last step is verification</li>
                 </ul>
             </div>
         </div>
-        <div class="d-inline-block float-end submit-row" style="margin-bottom:8px;padding-top:0px;"><a class="btn btn-primary btn-lg active box-shadow w-100" role="button" id="submit-id-submit" style="background: #29303b;font-family: Cairo, sans-serif;height: 41px;padding: 4px;" href="https://bgdsl.blogspot.com/" target="_blank">تحقق</a>
+        <div class="d-inline-block float-end submit-row" style="margin-bottom:8px;padding-top:0px;"><a class="btn btn-primary btn-lg active box-shadow w-100" role="button" id="submit-id-submit" style="background: #29303b;font-family: Cairo, sans-serif;height: 41px;padding: 4px;" href="https://mfxu.blogspot.com" target="_blank">verification</a>
             <div class="alert alert-light" role="alert" style="margin: 6px;"><span></span>
-                <p style="margin-bottom: 0px;font-family: Cairo, sans-serif;"><i class="far fa-check-circle" id="loading-icon" style="font-size: 20px;text-align: center;color: rgb(76,180,27);"></i>&nbsp;Abdelrahman Nagy هذة الخدمة برعاية&nbsp;</p>
+                <p style="margin-bottom: 0px;font-family: Cairo, sans-serif;"><i class="far fa-check-circle" id="loading-icon" style="font-size: 20px;text-align: center;color: rgb(76,180,27);"></i>&nbsp;This service is sponsored by Abdelrahman Nagy&nbsp;</p>
             </div>
         </div>
     </div>
