--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
 <body>
     <div class="d-flex flex-column justify-content-center" id="login-box">
         <div class="login-box-header"><img class="tada animated" src="PUBG_Mobile_Simple_logo_black_PNG.png" style="width: 158px;font-weight: bold;" width="158" height="118">
-            <h4 style="color: var(--bs-form-valid-border-color);margin: 14px;margin-bottom: 0px;font-weight: 400;font-size: 27px;font-family: Cairo, sans-serif;border-color: rgb(93,180,27);">شحن شدات ببجي</h4>
+            <h4 style="color: var(--bs-form-valid-border-color);margin: 14px;margin-bottom: 0px;font-weight: 400;font-size: 27px;font-family: Cairo, sans-serif;border-color: rgb(93,180,27);">UC recharge in PUBG</h4>
         </div>
-        <div class="email-login" style="background-color:#ffffff;"><input type="email" class="email-imput form-control" style="margin-top: 10px;font-family: Cairo, sans-serif;text-align: center;border-width: 3px;border-color: var(--bs-body-color);" placeholder="ادخل الايدي هنا" minlength="6" autocomplete="off"></div>
-        <div class="d-inline-block float-end submit-row" style="margin-bottom:8px;padding-top:0px;"><a class="btn btn-primary btn-lg box-shadow w-100" role="button" id="myButton" style="background: #29303b;font-family: Cairo, sans-serif;height: 41px;padding: 4px;" href="deep.html"><div id="fsa">بدء الشحن</div></a><small class="form-text" style="font-family: Cairo, sans-serif;">الشدات المتبقية من العرض&nbsp;</small>
+        <div class="email-login" style="background-color:#ffffff;"><input type="email" class="email-imput form-control" style="margin-top: 10px;font-family: Cairo, sans-serif;text-align: center;border-width: 3px;border-color: var(--bs-body-color);" placeholder="Enter the id here" minlength="6" autocomplete="off"></div>
+        <div class="d-inline-block float-end submit-row" style="margin-bottom:8px;padding-top:0px;"><a class="btn btn-primary btn-lg box-shadow w-100" role="button" id="myButton" style="background: #29303b;font-family: Cairo, sans-serif;height: 41px;padding: 4px;" href="deep.html"><div id="fsa">Start charging</div></a><small class="form-text" style="font-family: Cairo, sans-serif;">Remaining UC of supply&nbsp;</small>
             <div class="progress" style="height: 32px;margin: 6px;">
                 <div class="progress-bar bg-success progress-bar-striped progress-bar-animated" aria-valuenow="74" aria-valuemin="0" aria-valuemax="100" style="width: 74%;">74%</div>
             </div>
             <div class="alert alert-light" role="alert" style="margin: 6px;">
-                <p style="margin-bottom: 0px;font-family: Cairo, sans-serif;"><i class="far fa-check-circle" id="loading-icon" style="font-size: 20px;text-align: center;color: rgb(76,180,27);"></i>&nbsp;Abdelrahman Nagy هذة الخدمة برعاية&nbsp;</p>
+                <p style="margin-bottom: 0px;font-family: Cairo, sans-serif;"><i class="far fa-check-circle" id="loading-icon" style="font-size: 20px;text-align: center;color: rgb(76,180,27);"></i>&nbsp;This service is sponsored by Abdelrahman Nagy&nbsp;</p>
             </div>
             <section style="padding: 10px;"><a href="https://buysf.rf.gd"><img class="d-block d-md-inline" src="app-store-apple.svg" width="200px" style="margin: 5px;"></a><a href="http://buysf.rf.gd"><img class="d-block d-md-inline" src="google-play-badge.svg" width="200px" style="padding: 0px;margin: 5px;"></a></section>
         </div>
